<resources>
    <string name="app_name">Story App</string>
    <string name="masukan_email">Masukan email</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="waslim">Waslim</string>
    <string name="terhubung_dengan_saya">Terhubung dengan saya</string>
    <string name="link_ig">https://www.instagram.com/waslim___/?hl=id</string>
    <string name="link_linkedin">https://www.linkedin.com/in/waslim-a13624231/</string>
    <string name="link_github">https://github.com/Waslim240</string>
    <string name="image_me">Gambar Saya</string>
    <string name="instagram">Instagram</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <string name="tentang_saya">About</string>
    <string name="mode_dark">Mode Gelap</string>
    <string name="nama_saya">Nama saya waslim</string>
    <string name="terhubung_dengan">Mari terhubung dengan saya melalui</string>
    <string name="pratinjau_image">Pratinjau image</string>
    <string name="camerax">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">upload</string>
    <string name="description">Description</string>
    <string name="masukan_deskripsi">Masukan deskripsi</string>
    <string name="upload_story">Upload story</string>
    <string name="dengan_camerax">Ambil gambar dengan kamera X</string>
    <string name="dengan_camera">Ambil gambar dengan kamera</string>
    <string name="dengan_gallery">Ambil gambar dengan gallery</string>
    <string name="ambil_gambar">Ambil gambar</string>
    <string name="beralih_kamera">Beralih kamera</string>
    <string name="gambar_story">Gambar story</string>
    <string name="name">Name</string>
    <string name="klik_untuk_menambahkan">Klik untuk menambahkan story</string>
    <string name="login">Login</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="register">Register</string>
    <string name="masukan_name">Masukan Name</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_disini">Masuk disini</string>
    <string name="bahasa">Bahasa</string>
    <string name="ganti">Ganti</string>
    <string name="tidak_mendapatkan_permission">Tidak mendapatkan permission.</string>
    <string name="pilih_gambar">pilih gambar</string>
    <string name="email_harus_valid">Format email harus valid</string>
    <string name="nama_harus_di_isi">Nama harus di isi</string>
    <string name="password_harus_6_karakter">Password harus 6 karakter</string>
    <string name="login_gagal">Login gagal, cek email dan password</string>
    <string name="login_berhasil">Login berhasil</string>
    <string name="gagal_ambil_gambar">Gagal mengambil gambar</string>
    <string name="gagal_munculkan_gambar">Gagal memunculkan kamera</string>
    <string name="deskripsi_harus_isi">Deskripsi harus di isi</string>
    <string name="gambar_harus_ada">Gambar harus ada</string>
    <string name="berhasil_menambah_story">Berhasil menambahkan story</string>
    <string name="gagal_memuat_data">Gagal memuat data</string>
    <string name="konfirmasi_logout">KONFIRMASI LOGOUT</string>
    <string name="yakin_ingin_keluar">Anda Yakin Ingin Keluar ?</string>
    <string name="berhasil_keluar">Berhasil Keluar</string>
    <string name="tidak_jadi_keluar">Tidak Jadi Keluar</string>
    <string name="ya">YA</string>
    <string name="tidak">TIDAK</string>
    <string name="tekan_lagi_untuk_keluar">Tekan lagi untuk keluar</string>
    <string name="berhasil_membuat_akun">Berhasil membuat akun</string>
    <string name="gagal_membuat_akun">Gagal membuat akun</string>
    <string name="ambil_gambar_menggunakan">Ambil gambar menggunakan</string>
    <string name="tambah_story_baru">Add New Story</string>
    <string name="detail">Detail</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sertakan_dengan_lokasi">Sertakan dengan lokasi?</string>
    <string name="un_authorization">Un Authorization</string>
    <string name="loading">Loading</string>
    <string name="coba_kembali">Coba kembali</string>
    <string name="maps">Maps</string>
    <string name="style_error">Style parsing failed</string>
</resources>