<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_ambil_dengan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ambil_gambar_menggunakan"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="8dp"
            android:text="@string/gallery"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/tv_ambil_dengan"
            app:layout_constraintTop_toBottomOf="@+id/tv_ambil_dengan"
            app:drawableStartCompat="@drawable/ic_baseline_image_24" />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/tv_gallery"
            app:layout_constraintTop_toBottomOf="@+id/tv_gallery"
            app:drawableStartCompat="@drawable/ic_baseline_camera_24" />

        <TextView
            android:id="@+id/tv_cameraX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:text="@string/camerax"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/tv_camera"
            app:layout_constraintTop_toBottomOf="@+id/tv_camera"
            app:drawableStartCompat="@drawable/ic_baseline_camera_alt_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>