<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_image_24"
            android:contentDescription="@string/pratinjau_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/take_a_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/ambil_gambar"
            android:textSize="16sp"
            android:background="@drawable/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preview_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/masukan_deskripsi"
            app:counterEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/take_a_picture"
            app:layout_constraintStart_toStartOf="@+id/take_a_picture"
            app:layout_constraintTop_toBottomOf="@+id/take_a_picture">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_description_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/upload"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/switch_location" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sertakan_dengan_lokasi"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/switch_location"
            app:layout_constraintEnd_toStartOf="@+id/switch_location"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/switch_location" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchPadding="30dp"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progress_bar_addStory"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/file_loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>