<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/dark_green_sea">

        <com.github.siyamed.shapeimageview.RoundedImageView
            android:id="@+id/iv_stories"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/gambar_story"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:siBorderColor="@color/jingga"
            app:siBorderWidth="2dp"
            app:siRadius="5dp"
            app:siSquare="true"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name_stories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/jingga"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_stories"
            app:layout_constraintTop_toTopOf="@+id/iv_stories"
            tools:ignore="TextContrastCheck"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_description_stories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/jingga"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_name_stories"
            app:layout_constraintStart_toStartOf="@+id/tv_name_stories"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_stories"
            tools:ignore="TextContrastCheck"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>