<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_story_app"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/book"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_story_app_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="#FF4500"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_story_app" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="#FF4500"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <View
                android:id="@+id/view"
                android:layout_width="210dp"
                android:layout_height="400dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/component_background_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_story_app_register" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="5dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_background_button"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutNameRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="50dp"
                        android:hint="@string/masukan_name"
                        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints">

                        <com.waslim.storyapp.view.customview.NameEditText
                            android:id="@+id/et_name_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#757575" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutEmailRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/masukan_email"
                        app:startIconDrawable="@drawable/ic_baseline_email_24"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutNameRegister"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayoutNameRegister"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNameRegister">

                        <com.waslim.storyapp.view.customview.EmailEditText
                            android:id="@+id/et_email_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#757575" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPasswordRegister"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/masukan_password"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmailRegister"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmailRegister"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailRegister"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24"
                        app:endIconMode="password_toggle">

                        <com.waslim.storyapp.view.customview.PasswordEditText
                            android:id="@+id/et_password_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#757575" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/progress_bar_register"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:visibility="gone"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/file_loading"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/register"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_background_button"
                android:text="@string/masuk_disini"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_login"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/tv_login"
                android:padding="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>